--- a/lib/plausible_web/templates/email/spike_notification.html.eex
+++ b/lib/plausible_web/templates/email/spike_notification.html.eex
@@ -10,7 +10,7 @@ There are currently <%= @current_visitors %> visitors on <%= link(@site.domain, 
 
 <%= if @link do %>
 <br /><br />
-View dashboard: @link
+View dashboard: <%= link(@link, to: @link) %>
 <% end %>
 <br /><br />
 --
