remove all repeated email footers

--- a/lib/plausible_web/templates/email/cancellation_email.html.eex
+++ b/lib/plausible_web/templates/email/cancellation_email.html.eex
@@ -4,5 +4,4 @@ I'd love to hear about your experience and how you think we can improve Plausibl
 
 If you decide you'd like to continue keeping track of your site traffic while respecting the privacy of your visitors, obviously we'd love to have you back. You can restart your subscription from your <a href="https://plausible.io/settings">account settings</a>.<br /><br />
 
-Hope to see you around!<br />
-Uku Taht
+Hope to see you around!
