--- a/lib/plausible_web/templates/email/google_analytics_import.html.eex
+++ b/lib/plausible_web/templates/email/google_analytics_import.html.eex
@@ -29,14 +29,6 @@
 
   <%= if !Application.get_env(:plausible, :is_selfhost) do %>
     <br /> <br />
-
-    Please reply to this email to let us know if you're still experiencing issues with the import. Thanks!
-    <br /> <br />
-
-    The Plausible Team 💌
+    Please reply to this email to let us know if you're still experiencing issues with the import.
   <% end %>
 <% end %>
-<br /><br />
---
-<br /><br />
-<%= plausible_url() %><br />
