--- a/lib/plausible_web/templates/site/new.html.eex
+++ b/lib/plausible_web/templates/site/new.html.eex
@@ -2,26 +2,6 @@
   <%= form_for @changeset, "/sites", [class: "max-w-lg w-full mx-auto bg-white dark:bg-gray-800 shadow-lg rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
     <h2 class="text-xl font-black dark:text-gray-100">Your website details</h2>
 
-    <div class="rounded-md bg-yellow-50 dark:bg-transparent dark:border border-yellow-200 p-4 mt-4">
-      <div class="flex">
-        <div class="flex-shrink-0">
-          <svg class="h-5 w-5 text-yellow-400 dark:text-yellow-300" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-            <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
-          </svg>
-        </div>
-        <div class="ml-3">
-          <h3 class="text-sm font-medium text-yellow-800 dark:text-yellow-400">
-            Site creation disabled
-          </h3>
-          <div class="mt-2 text-sm text-yellow-700 dark:text-yellow-300">
-            <p>
-              Creating sites is currently unavailable due to regular database maintenance. Please try again after 1 hour.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <%= if @is_at_limit do %>
       <div class="rounded-md bg-yellow-50 dark:bg-transparent dark:border border-yellow-200 p-4 mt-4">
         <div class="flex">
@@ -98,7 +78,7 @@
       if (option) { option.selected = "selected"}
     </script>
 
-    <%= submit "Add snippet →", class: "button mt-4 w-full", disabled: true %>
+    <%= submit "Add snippet →", class: "button mt-4 w-full", disabled: @is_at_limit %>
   <% end %>
 
   <%= if @is_first_site do %>
