--- a/priv/data_migrations/NumericIDs/sql/insert-into-tmp-events-v2.sql.eex
+++ b/priv/data_migrations/NumericIDs/sql/insert-into-tmp-events-v2.sql.eex
@@ -10,9 +10,7 @@ INSERT INTO tmp_events_v2 (
   transferred_from
 )
 SELECT
-  dictGet(
-    'domains_lookup', 'site_id', domain
-  ),
+  (SELECT site_id from domains_lookup WHERE domain = domain LIMIT 1),
   timestamp,
   name,
   user_id,
@@ -40,15 +38,4 @@ SELECT
   transferred_from
 FROM
   events
-WHERE
-  (
-    domain IN (
-      SELECT
-        domain
-      FROM
-        dictionary('domains_lookup')
-      WHERE
-    partition <= '<%= @partition %>'
-    )
-  )
-AND (_partition_id = '<%= @partition %>')
+WHERE (_partition_id = '<%= @partition %>')
